用户模块: 更新swagger
